# avf-server

./: Cargo.toml  build.rs  flake.nix
.github/workflows/: build.yaml  image.yaml
proto/avf/v1/: spec.proto  transform.proto
sdk/go/: buf.gen.yaml  generate.go  go.mod  go.sum
sdk/go/avf/v1/: spec.pb.go  transform.pb.go  transform_grpc.pb.go
sdk/go/avfclient/: client.go
sdk/go/examples/transcode/: main.go
src/: main.rs  proto.rs  service.rs
tests/: mock.rs  test_services.rs
