[package]
name = "avf-server"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
prost = "0.13.5"
tokio = { version = "1.45.0", features = ["full"] }
tokio-stream = "0.1.17"
tonic = { version = "0.13.1", features = ["gzip"] }
tonic-reflection = "0.13.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[build-dependencies]
tonic-build = "0.13.1"

[dev-dependencies]
bytes = "1.10.1"
http-body = "1.0.1"
lazy_static = "1.5.0"
